add ui displaying

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,6 @@
         style="?android:attr/progressBarStyleLarge"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="@dimen/progress_bar_margin"
-        android:visibility="gone" />
+        android:layout_margin="@dimen/progress_bar_margin" />
 
 </FrameLayout>
